--- a/Fyxme/Views/Home/_PartialRequestView.cshtml
+++ b/Fyxme/Views/Home/_PartialRequestView.cshtml
@@ -30,14 +30,14 @@
         <!--<div class="text-item">Upload Photo(s)</div>-->
         <div id="upload_pic_1">
             <div class="u-file"><input id="txtUFile1" name="txtUFile1" type="file" onchange="$('#txtUploadPic1').val(this.value.split('\\').pop().split('/').pop());"></div>
-            <input type="text" id="txtUploadPic1" name="txtUploadPic1" class="textbox" placeholder="Select a photo to upload" />
+            <input type="text" id="txtUploadPic1" name="txtUploadPic1" class="textbox" placeholder="Select a photo to upload" readonly="readonly" />
             <div style="width:206px;">
                 <div id="btnAddPic1" name="btnAddPic1" class="btn-upload" style="float:right; width:50px">+</div>
                 <div id="btnUpload1" name="btnUpload1" class="btn-upload" onclick="browseFile('txtUFile1');">Select Photo</div>
             </div>
         </div>
         <div id="upload_pic_2" class="upload-pic-form">
-            <input type="text" id="txtUploadPic2" name="txtUploadPic2" class="textbox" placeholder="Select a photo to upload" />
+            <input type="text" id="txtUploadPic2" name="txtUploadPic2" class="textbox" placeholder="Select a photo to upload" readonly="readonly" />
             <div class="u-file"><input id="txtUFile2" name="txtUFile2" type="file" onchange="$('#txtUploadPic2').val(this.value.split('\\').pop().split('/').pop());"></div>
             <div style="width:206px;">
                 <div id="btnAddPic2" name="btnAddPic1" class="btn-upload" style="float:right; width:50px">+</div>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div id="upload_pic_3" class="upload-pic-form">
-            <input type="text" id="txtUploadPic3" name="txtUploadPic3" class="textbox" placeholder="Select a photo to upload" />
+            <input type="text" id="txtUploadPic3" name="txtUploadPic3" class="textbox" placeholder="Select a photo to upload" readonly="readonly" />
             <div class="u-file"><input id="txtUFile3" name="txtUFile3" type="file" onchange="$('#txtUploadPic3').val(this.value.split('\\').pop().split('/').pop());"></div>
             <div style="width:206px;">
                 <div id="btnAddPic3" name="btnAddPic3" class="btn-upload" style="float:right; width:50px">+</div>
@@ -53,22 +53,19 @@
             </div>
         </div>
         <div id="upload_pic_4" class="upload-pic-form">
-            <input type="text" id="txtUploadPic4" name="txtUploadPic4" class="textbox" placeholder="Select a photo to upload" />
+            <input type="text" id="txtUploadPic4" name="txtUploadPic4" class="textbox" placeholder="Select a photo to upload" readonly="readonly" />
             <div class="u-file"><input id="txtUFile4" name="txtUFile4" type="file" onchange="$('#txtUploadPic4').val(this.value.split('\\').pop().split('/').pop());"></div>
             <div id="btnUpload4" name="btnUpload4" class="btn-upload" onclick="browseFile('txtUFile4');">Select Another Photo</div>
         </div>
         <div class="text-item-small">Don’t have a photo yet? No worries, just submit a brief description and text us the photo(s) later to <span>888-983-9963</span></div>
         <div id="spacer-input">
             @Html.DropDownListFor(model => model.SelectedCarMakerId, new SelectList(Model.DDListCarMakers, "Value", "Text"), new { @Id = "cboCarMakers", @class = "textbox", @onchange = "ddlUpdateValues('Home/UpdateCarModels', this.value, 'cboCarModels'); ddlUpdateValues('Home/UpdateCarYears', '', 'cboCarYears');" })
-            @Html.ValidationMessageFor(model => model.SelectedCarMakerId, null, new { @class = "field-validation-error" })
         </div>
         <div id="spacer-input">
             @Html.DropDownListFor(model => model.SelectedCarModelId, new SelectList(Model.DDListCarModels, "Value", "Text"), new { @Id = "cboCarModels", @class = "textbox", @onchange = "ddlUpdateValues('Home/UpdateCarYears', this.value, 'cboCarYears')" })
-            @Html.ValidationMessageFor(model => model.SelectedCarModelId, null, new { @class = "field-validation-error" })
         </div>
         <div id="spacer-input">
             @Html.DropDownListFor(model => model.SelectedCarYearId, new SelectList(Model.DDListCarYears, "Value", "Text"), new { @Id = "cboCarYears", @class = "textbox" })
-            @Html.ValidationMessageFor(model => model.SelectedCarYearId, null, new { @class = "field-validation-error" })
         </div>
         <div id="spacer-input">
             @Html.TextAreaFor(model => model.DamageDescription, new { @class = "textarea", placeholder = "Damage Description (Optional)", id = "txtDamageDesc_01" })
