--- a/Fyxme/Content/Css/Site.css
+++ b/Fyxme/Content/Css/Site.css
@@ -9,9 +9,8 @@ html, body {
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
-	padding-bottom: 300px;
+	/*padding-bottom: 300px;*/
     text-align: center;
-    /*/height:2000px;*/
 }
 
 @media (min-width:1030px) {
@@ -267,6 +266,15 @@ html, body {
     width: 100%;
 }
 
+@media (max-width: 459px) {
+    #bg_top {
+        /*background-position: left -200px top 0px;*/
+       /*background-size: auto;*/
+       min-height: 425px;
+       width:100%;
+    }
+}
+
 #bg_top .align_to_page
 {
 	margin-left: auto;
@@ -289,6 +297,9 @@ html, body {
     padding: 0px 0px 12px;
     margin-top: 304px;
     line-height: 40px;
+}
+@media (max-width: 459px) {
+	.caption_center_white_1 { margin-top: 135px; font-size: 30px; line-height: 30px; }
 }
 
 .caption_center_white_2
@@ -319,6 +330,9 @@ html, body {
 .caption_learn_more:hover { color: #F7941E; text-decoration: none; }
 
 #spacer_to_caption_learn_more { margin-top: 160px; }
+@media (max-width: 459px) {
+	#spacer_to_caption_learn_more { margin-top: 175px; margin-bottom: 35px; }
+}
 
 
 /* Section < How it works > */
@@ -329,6 +343,10 @@ html, body {
     position: absolute;
     width: 100%;
 }
+@media (max-width: 459px) {
+	#spacer_to_content { margin-top: 480px;  }
+}
+
 
 .section_title
 {
@@ -531,6 +549,11 @@ html, body {
     position: absolute;
     width: 100%;
 }
+@media (max-width: 459px) {
+    #bg_why_fyxme_1 {
+       min-height: 350px;
+    }
+}
 
 #bg_why_fyxme_2
 {
@@ -542,14 +565,11 @@ html, body {
     width: 100%;
 }
 
-@media (max-width: 600px) {
+/* EXEMPLE */
+
+@media (max-width: 459px) {
     #bg_why_fyxme_2 {
-        background-position: left -200px top 0px;
-    }
-}
-@media (max-width: 535px) {
-    #bg_why_fyxme_2 {
-        background-position: left -240px top 0px;
+       min-height: 350px;
     }
 }
 
@@ -568,7 +588,12 @@ html, body {
 }
 
 @media (max-width: 459px) {
-	.section_title_why_fyxme { margin-top: 265px; }
+	.section_title_why_fyxme { margin-top: 90px; }
+}
+
+.map { width: 55%; }
+@media (max-width: 459px) {
+	.map { width: 100%; }
 }
 
 .caption_center_white_3
@@ -585,7 +610,14 @@ html, body {
 }
 
 @media (max-width: 459px) {
-	.caption_center_white_3 { margin-top: 235px; }
+	.caption_center_white_3 { margin-top: 135px; font-size: 30px; line-height: 30px; }
+    /*.caption_center_white_1 {margin-top: 135px; font-size: 30px; line-height: 30px;}*/
+}
+
+@media (max-width: 459px) {
+    .caption_center_white_2 {
+        font-size: 18px;
+    }
 }
 
 
@@ -600,11 +632,15 @@ html, body {
 	font-weight: normal;
 	text-align: center;
 	text-transform: none;
-	padding: 138px 0px 30px;
+	padding: 165px 0px 30px;
 	line-height: 41px;
 	margin-left: 20px;
 }
-
+@media (max-width: 459px) {
+    .meet-our-tech {
+        padding-top: 65px;
+    }
+}
 .tech-desc {
     color: #666666;
 	font-family: Trebuchet, Trebuchet MS, Tahoma, Arial, sans-serif;
@@ -659,7 +695,7 @@ html, body {
 	font-weight: normal;
 	text-transform: none;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     width: 100%;
     text-align: center;
 }
@@ -668,6 +704,7 @@ html, body {
     margin-top: 15px; 
     width: 220px;
     display: inline-table;
+    margin-bottom: 0px;
 }
 
 #tech-form {
@@ -889,6 +926,12 @@ html, body {
 }
 }
 
+@media (max-width: 459px) {
+    #bgTopWorkWithUs {
+    min-height: 1000px;
+}
+}
+
 #work-with-us-form-box {
     width: 100%;
     margin-top: 105px;
@@ -921,10 +964,9 @@ html, body {
     width: 100%;
 }
 @media (max-width: 990px) {
-    #spacer_to_content-tech
-{
+    #spacer_to_content-tech {
 	margin-top: 1050px;
-}
+    }
 }
 
 
@@ -941,15 +983,9 @@ html, body {
     }
 @media (max-width: 990px) {
     .caption-left-white-tech-1 {
-        color: #fff;
-        font-family: 'Cabin', sans-serif;
-        font-size: 48px;
-        font-weight: 700;
-        text-align: left;
-        text-transform: none;
+        font-size: 30px;
         padding: 0px 0px 12px;
         margin-top: 100px;
-        line-height: 40px;
     }
 }
 
@@ -964,6 +1000,12 @@ html, body {
     text-align: left;
     text-transform: none;
     padding: 0px;
+}
+@media (max-width: 990px) {
+    .caption-left-white-tech-2 {
+        font-size: 18px;
+        margin-top: 0px;
+    }
 }
 
 .section-title-tech
@@ -1079,14 +1121,9 @@ li:before {
 
 
 #policy-privacy-text {
-    color: #231f20;
-    font-family: 'Cabin', sans-serif;
-    font-size: 21px;
-    font-weight: 400;
     letter-spacing: 1px;
     text-align: left;
     text-transform: none;
     padding: 0px;
-    margin-top: 100px;
+    margin-top: 80px;
 }
-
